# todo-hackathon

./: .gitignore  CLAUDE.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  SETUP_OPENAI_AGENTS.md  tmpclaude-687e-cwd
.claude/skills/forntend-desgin/: SKILL.md
.claude/skills/theme-designer/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env.example  .gitignore  .vercelignore  agent.py  agent_openai.py  auth.py  db.py  main.py  mcp_tools.py  models.py  pyproject.toml  requirements.txt  reset_password.py  schemas.py  test_agent_setup.py  vercel.json
backend/routes/: auth.py  chat.py  tasks.py
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: ChatInterface.tsx  FloatingChatButton.tsx  Footer.tsx  Header.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  Toast.tsx
frontend/lib/: api.ts  auth.tsx  toast.tsx  types.ts
history/prompts/002-ai-todo-chatbot/: PHR-20260206-002-implement.prompt.md
specs/: constitution.md
specs/001-landing-page-ui/: spec.md
specs/001-task-crud/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-landing-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+19 files in other folders)
