[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic[email]==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlmodel==0.0.14",
    "uvicorn[standard]==0.24.0",
]
