[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "dotenv>=0.9.9",
    "fastapi==0.116.0",
    "litellm==1.50.0",
    "mcp==1.25.0",
    "openai-agents==0.7.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic[email]>=2.12.3",
    "python-jose[cryptography]==3.3.0",
    "python-multipart>=0.0.9",
    "sqlmodel==0.0.14",
    "uvicorn[standard]==0.24.0"
]
